# BinaryLLM

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/build_candidates/: CMakeLists.txt  main.cpp
apps/context_parts_build/: CMakeLists.txt  main.cpp
apps/context_parts_eval/: CMakeLists.txt  main.cpp
apps/debug_decompose/: CMakeLists.txt  main.cpp
apps/encode_corpus/: CMakeLists.txt  main.cpp
apps/pass1_train/: CMakeLists.txt  main.cpp
apps/phase1_extract/: CMakeLists.txt  main.cpp
apps/phase2_signatures/: CMakeLists.txt  main.cpp
apps/surprisal_build/: CMakeLists.txt  main.cpp
apps/test_typo_hamming/: CMakeLists.txt  main.cpp
apps/uniqueness_smoke/: CMakeLists.txt  main.cpp
data/: README.md
docs/: context_representation.md  encoder_validation.md
src/binarycore/: CMakeLists.txt
src/binarycore/include/binarycore/: binary_vec.hpp  token_encoder.hpp  tokenizer.hpp
src/binarycore/include/binarycore/containers/: binary_vec.hpp
src/binarycore/include/binarycore/containers/detail/: binary_vec_128.hpp  binary_vec_256.hpp  binary_vec_512.hpp  binary_vec_64.hpp  binary_vec_generic.hpp
src/binarycore/include/binarycore/encoding/: token_encoder.hpp  tokenizer.hpp
src/binarycore/include/binarycore/math/: dot.hpp  hamming.hpp  popcount.hpp  similarity.hpp  token_math.hpp
src/binarycore/include/binarycore/sparse/: ops.hpp  sparse_matrix.hpp  sparse_matrix_builder.hpp  sparse_vec.hpp
src/binarycore/src/: token_encoder.cpp  tokenizer.cpp
src/binarycore/src/encoding/: token_encoder.cpp  tokenizer.cpp
src/binaryoptim/: CMakeLists.txt
src/binaryoptim/include/binaryoptim/: dominant_set.hpp  thresholds.hpp
src/binaryoptim/src/: dominant_set.cpp  thresholds.cpp
src/binarytrain/: CMakeLists.txt
src/binarytrain/include/binarytrain/parts/: decomposer.hpp  dictionary.hpp  extractor.hpp  part.hpp  tokenize.hpp
src/binarytrain/include/binarytrain/signatures/: cooc_between_builder.hpp  cooc_within_builder.hpp  sentence_split.hpp
src/binarytrain/src/parts/: decomposer.cpp  dictionary.cpp  extractor.cpp  tokenize.cpp
src/binarytrain/src/signatures/: cooc_between_builder.cpp  cooc_within_builder.cpp  sentence_split.cpp
src/core/: CMakeLists.txt
src/core/adaptive_threshold/: CMakeLists.txt
src/core/adaptive_threshold/include/: adaptive_threshold.hpp
src/core/adaptive_threshold/src/: adaptive_threshold.cpp
src/core/binary_vec/: CMakeLists.txt
src/core/binary_vec/include/: big_sparse_binary_vec.hpp  big_sparse_binary_vec_dynamic.hpp  binary_vec.hpp  dense_binary_vec.hpp  sparse_binary_vec.hpp
src/core/codebook/: CMakeLists.txt
src/core/codebook/include/: codebook.hpp  pursuit.hpp  recon_metrics.hpp
src/core/codebook/src/: codebook.cpp  pursuit.cpp  recon_metrics.cpp
src/core/math/: CMakeLists.txt
src/core/math/include/: dense.hpp
src/core/math/src/: dense.cpp
src/core/parts/: CMakeLists.txt
src/core/parts/include/: decomposer.hpp  dict_augment.hpp  dict_io.hpp  dict_reorder.hpp  dictionary.hpp  extractor.hpp  part.hpp  tokenize.hpp
src/core/parts/src/: decomposer.cpp  dict_augment.cpp  dict_io.cpp  dict_reorder.cpp  dictionary.cpp  extractor.cpp  tokenize.cpp
src/core/parts2f/: CMakeLists.txt
src/core/parts2f/include/: parts2f.hpp
src/core/parts2f/src/: parts2f.cpp
src/core/pass1/: CMakeLists.txt
src/core/pass1/include/: pass1.hpp
src/core/pass1/src/: pass1.cpp
src/core/signatures/: CMakeLists.txt
src/core/signatures/include/: candidate_file.hpp  encoder.hpp  paragraph_split.hpp  sentence_split.hpp  three_f.hpp  weight_table.hpp  word_encoder.hpp
src/core/signatures/src/: candidate_file.cpp  encoder.cpp  paragraph_split.cpp  sentence_split.cpp  weight_table.cpp  word_encoder.cpp
src/core/sketch/: CMakeLists.txt
src/core/sketch/include/: frequent_directions.hpp
src/core/sketch/src/: frequent_directions.cpp
src/core/sparse/: CMakeLists.txt
src/core/sparse/include/: info_jaccard.hpp
tests/binarycore/: CMakeLists.txt  main.cpp  test_binary_vec.cpp  test_dot.cpp  test_hamming.cpp  test_popcount.cpp  test_similarity.cpp  test_token_encoder.cpp  test_tokenizer.cpp
tests/binarycore/sparse/: test_sparse.cpp
tests/binaryoptim/: CMakeLists.txt  test_adaptive_prune.cpp  test_dominant_set.cpp  test_thresholds.cpp
tests/binarytrain/: CMakeLists.txt  main.cpp
tests/binarytrain/parts/: test_decomposer.cpp  test_dictionary.cpp  test_dictionary_binary.cpp  test_extractor.cpp  test_tokenize.cpp  test_tokenize_connectors.cpp
tests/binarytrain/signatures/: test_cooc_between.cpp  test_cooc_within.cpp  test_sentence_split.cpp
tests/core/: CMakeLists.txt
tests/core/adaptive_threshold/: CMakeLists.txt  test_adaptive_prune.cpp  test_thresholds.cpp
tests/core/binary_vec/: CMakeLists.txt  test_big_sparse_binary_vec.cpp  test_big_sparse_binary_vec_dynamic.cpp  test_binary_vec.cpp  test_dense_binary_vec.cpp  test_sparse_binary_vec.cpp
tests/core/codebook/: CMakeLists.txt  test_codebook.cpp  test_pursuit.cpp  test_recon_metrics.cpp
tests/core/math/: CMakeLists.txt  test_dense.cpp
tests/core/parts/: CMakeLists.txt  test_decomposer.cpp  test_dict_io.cpp  test_dict_reorder.cpp  test_dictionary.cpp  test_dictionary_binary.cpp  test_extractor.cpp  test_tokenize.cpp  test_tokenize_connectors.cpp
tests/core/parts2f/: CMakeLists.txt  test_parts2f.cpp
tests/core/pass1/: CMakeLists.txt  test_pass1.cpp
tests/core/signatures/: CMakeLists.txt  test_candidate_file.cpp  test_encoder.cpp  test_paragraph_split.cpp  test_sentence_split.cpp  test_weight_table.cpp  test_word_encoder.cpp
tests/core/sketch/: CMakeLists.txt  test_frequent_directions.cpp
tests/core/sparse/: CMakeLists.txt  test_info_jaccard.cpp
